add_subdirectory("automap")
add_subdirectory("cheat")
add_subdirectory("cli")
add_subdirectory("common")
add_subdirectory("config")
add_subdirectory("dehacked")
add_subdirectory("exit-screen")
add_subdirectory("finale")
add_subdirectory("glob")
add_subdirectory("hud")
add_subdirectory("input")
add_subdirectory("intermission")
add_subdirectory("map")
add_subdirectory("math")
add_subdirectory("memory")
add_subdirectory("menu")
add_subdirectory("messages")
add_subdirectory("net")
add_subdirectory("playsim")
add_subdirectory("rand")
add_subdirectory("render")
add_subdirectory("savegame")
add_subdirectory("screen-melt")
add_subdirectory("sha1")
add_subdirectory("sound")
add_subdirectory("special")
add_subdirectory("stats")
add_subdirectory("status-bar")
add_subdirectory("time")
add_subdirectory("video")
add_subdirectory("wad")

set(SOURCE_FILES i_main.c d_loop.c d_loop.h d_main.c d_main.h)

set(EXTRA_LIBS SDL2::SDL2main SDL2::SDL2 common cli map video sha1 config exitscreen net wad memory automap dehacked finale hud intermission menu messages rand render savegame screenmelt sound special stats statusbar)
if(PNG_FOUND)
    list(APPEND EXTRA_LIBS PNG::PNG)
endif()
if(FluidSynth_FOUND)
    list(APPEND EXTRA_LIBS FluidSynth::libfluidsynth)
endif()
if(WIN32)
	list(APPEND EXTRA_LIBS winmm)
endif()

if(WIN32)
    add_executable("${PACKAGE_TARNAME}" WIN32 ${SOURCE_FILES} "${CMAKE_CURRENT_BINARY_DIR}/doom-res.rc")
else()
    add_executable("${PACKAGE_TARNAME}" ${SOURCE_FILES})
endif()

target_include_directories("${PACKAGE_TARNAME}" PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_BINARY_DIR})
target_link_libraries("${PACKAGE_TARNAME}" ${EXTRA_LIBS})

if(MSVC)
    set_target_properties("${PACKAGE_TARNAME}" PROPERTIES LINK_FLAGS "/MANIFEST:NO")
endif()
